# eora-rag

./: .gitignore  README.md  pyproject.toml
app/: config.py  data.py  llm_tokens.py  rag.py
app/bot/: handlers.py  keyboards.py  run.py  state.py
app/data/: parser.py  sources.py
app/llm/gigachat/: answer.py  chunk.py  embeddings.py  index.py  search.py  tokens.py
app/llm/openai/: answer.py  chunk.py  embeddings.py  index.py  prompts.py  search.py  tokens.py
app/scripts/: check_db.py  chroma.py  reset_chroma.py
app/scripts/gigachat/: index_gigachat.py  inspect_gigachat_collection.py  save_answer_gigachat.py
app/scripts/openai/: index_openai.py  inspect_openai_collection.py  save_answer_openai.py
