[project]
name = "eora-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Proskurin",email = "maxiprsk@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "chromadb (>=1.0.16,<2.0.0)",
    "openai (>=1.99.9,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "gigachat (>=0.1.42.post1,<0.2.0)",
    "langchain-gigachat (>=0.3.12,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
ruff = "^0.12.8"
isort = "^6.0.1"
pre-commit = "^4.3.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 88